actualizacion de los notebooks

--- a/notebooks/01_inflacion.ipynb
+++ b/notebooks/01_inflacion.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e004a6c9",
+   "id": "c345d71c",
+   "metadata": {},
+   "source": [
+    "# Financiamiento público ajustado a la inflación a precios constantes:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75fff5e9",
    "metadata": {},
    "source": [
     "## Cargamos las Librerías:"
