--- a/notebooks/02_inflacion.ipynb
+++ b/notebooks/02_inflacion.ipynb
@@ -5,6 +5,14 @@
    "id": "350c17f4",
    "metadata": {},
    "source": [
+    "# Financiamiento público ajustado a la inflación a precios corrientes:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b4459cc",
+   "metadata": {},
+   "source": [
     "## Cargamos las Librerías:"
    ]
   },
